--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru-RU">
+<html>
     <head>
         <meta charset="utf-8">
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -345,14 +345,14 @@
 						    <div class="block block-type-info block-state-footerextend block-id-global-footertext" style="background:none !important;">
         <div class="block-content">
             <div class="block-text block-type-footertext-text">
-                Текст в подвале сайта
+                
             </div>
         </div>
     </div>
 
 						    <div class="block block-type-siteinfo block-state-readonly">
         <div class="block-text">
-            &copy; 2018 <a href="http://www.setup.ru" target="_blank">Конструктор сайтов Setup</a>
+          
         </div>
     </div>
 
