--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru-RU">
+<html>
     <head>
         <meta charset="utf-8">
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -32,8 +32,8 @@
 					</div>
 
 					<div class="container__row mb-30">
-						<div class="col-md-12 mb-30">
-							    <div id="ads" class="block block-type-context block-state-readonly block-state-hor">
+						
+					<div id="ads" class="block block-type-context block-state-readonly block-state-hor">
         <div id="ads-core">
             <a href="http://setup.ru" target="_blank">
                 <img src="/_s/i/banner_setup_hor.png" alt="Setup.ru: Создай и раскрути свой сайт бесплатно" width="880" height="90" />
