--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru-RU">
     <head>
-     
+        <meta charset="utf-8">
 						<!-- Logo -->
 						<div class="col-xs-3">
 							    <div class="block block-type-logo block-id-global-logo" style=" background-image:none !important">
